# Useless_Player

./: .gitignore  README.md  build.sh  build_s6.sh  package-lock.json  package.json
.github/workflows/: build-multi-arch.yml
jsapi/: CMakeLists.txt
jsapi/src/: bridge.cpp
jsapi/src/Shell/: Shell.cpp  Shell.h
src/: app.js  base-page.js
src/pages/index/: index.vue
src/styles/: base.less
src/utils/: backend.js  shell-api.js
tools/: build_s6.sh  patch_ui_toolchain.sh
